styles/sass/index.scss
// Variables

$default-transition-duration: 230ms;

// Global styles
html,
body {
    width: 100%;
    height: 100%;
}

body {
    font-family: "EB Garamond", Arial, Helvetica, sans-serif;
    // overflow-x: hidden;
}

.page {
    overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #464646;
    font-weight: 500;
    transition-duration: $default-transition-duration;
    &:hover {
        transition-duration: $default-transition-duration;
    }
}

p,
a,
span {
    color: #525252;
    transition-duration: $default-transition-duration;
    &:hover {
        transition-duration: $default-transition-duration;
    }
}

main {
    padding: 0 5px;
}

button {
    &:focus {
        outline: none;
    }
}

.button,
p,
.mail {
    font-family: "Roboto", Arial, Helvetica, sans-serif;
}

.button {
    color: white;
    border: none;
    padding: 15px 30px;
    border-radius: 15px;
    background-color: #38bda2;
    font-weight: 500;
}

// Header

.header {
    margin-top: 15px;
    font-family: "Roboto", Arial, Helvetica, sans-serif;
}

.header__logo {
    width: 95px;
    height: 76px;
}

.header__nav {
    max-width: 80%;
    .header__nav__link {
        &:hover {
            text-decoration: none;
            color: #38bda2;
        }
    }
}

.header-cta__wrapper {
    .header-cta__link {
        margin-right: 25px;
        font-weight: 500;
        color: #38bda2;
        &:hover {
            text-decoration: none;
        }
    }
}

.header__mobile-menu {
    display: none;
}

@media (max-width: 992px) {
    .header-cta__wrapper {
        flex-direction: column-reverse;
        position: relative;
        .header-cta__link {
            position: absolute;
            z-index: 999;
            top: 50px;
            margin-right: 0;
            margin-top: 10px;
        }
    }
}

@media (max-width: 768px) {
    .header-cta__wrapper {
        flex-direction: row;
        .header-cta__link {
            position: static;
            margin-top: 0;
            margin-right: 25px;
        }
    }
    .header__nav__wrapper {
        display: none;
    }
    .header__mobile-menu__wrapper {
        background: #197360;
    }
    .header__mobile-menu {
        display: block;
        margin-top: 20px;
        padding: 5px 0;
        .navbar-nav {
            margin-top: 15px;
        }
        .nav-item {
            margin: 5px 0;
            a {
                color: white;
                font-size: 16px;
            }
        }
    }
}

// Hero

.hero {
    margin-top: 150px;
}

.hero__title {
    font-size: 96px;
    position: relative;
    white-space: nowrap;
    z-index: 9;
}

.hero__image {
    max-width: 100%;
}

.hero__content {
    position: relative;
}

.hero-cta {
    position: absolute;
    bottom: 0;
    span {
        padding: 0 7px;
    }
    .hero-cta__link {
        color: #38bda2;
        text-decoration: underline;
        font-size: 16px;
        font-weight: 500;
    }
}

// Fresh perspective

.fresh-perspective {
    margin-top: 150px;
}

.fresh-perspective__image {
    padding: 30px;
}

.fresh-perspective__content {
    h2 {
        line-height: 45px;
        max-width: 60%;
        margin-bottom: 30px;
    }
    p {
        line-height: 23px;
        width: 88%;
    }
}

// Focus

.focus__wrapper {
    width: 100%;
    background: #197360;
}

.focus__background-item {
    max-height: 300px;
}

.focus__title {
    text-align: center;
    color: #fff;
}

.areas {
    margin-top: 30px;
}

.areas__item {
    background: white;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    height: 300px;
    width: 99%;
    padding: 50px 0 60px;
}

.areas-button__wrapper {
    margin-top: 30px;
    z-index: 999;
    position: relative;
}

.areas-button {
    position: absolute;
    top: 30px;
}

// Quote

.quote {
    margin-top: 50px;
    div {
        max-width: 88%;
    }
    h1 {
        font-size: 72px;
        color: #2b8c79;
    }
    p {
        font-weight: 500;
        margin-top: 50px;
    }
}

// Get in touch

.get-in-touch__text {
    margin-bottom: 40px;
    font-size: 36px;
}

.get-in-touch__link {
    color: #38bda2;
    font-size: 48px;
    text-decoration: underline;
    &:hover {
        color: #38bda2;
    }
}

// Footer

.footer__wrapper {
    margin-top: 80px;
    background-color: #197360;
    padding: 90px 0 65px;
    a,
    p,
    span {
        color: white;
    }
}

.footer {
    font-family: "Roboto", Arial, Helvetica, sans-serif;
    p {
        margin-bottom: 0;
    }
    .header__logo {
        transform: translateY(-25%);
    }
}

.footer__link {
    text-decoration: underline;
}

.footer {
    position: relative;
    padding-bottom: 160px;
}

.footer__copyright {
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
}

@media (max-width: 767px) {
    .footer {
        .header__logo {
            transform: none;
        }
    }

    .footer__logo__wrapper {
        justify-content: center !important;
    }

    .footer-pages {
        .header__nav {
            max-width: 100%;
            flex-direction: column !important;
            align-items: flex-start;
            text-align: left;
            a {
                margin: 7px 0;
            }
        }
    }

    .footer-info {
        display: flex;
        flex-direction: column;
        align-items: end;
        text-align: center;
        p, .footer__link {
            padding: 7px 0;
        }
    }

    .footer__copyright {
        position: static;
        transform: none;
    }
}

@media (max-width: 575px) {
    .footer {
        .row {
            width: 90%;
            margin-left: auto;
            margin-right: auto;
        }
    }
    .footer-pages {
        display: flex;
        justify-content: flex-start;
        .header__nav {
            max-width: max-content;
        }
    }
}

